# Flask_Production

./: .gitignore  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytest-workflow.yml  release-workflow.yml
cherry_flask/: core.py  sched.py
flask_production/: __init__.py  _capture.py  core.py  hols.py  job_logger.py  jobs.py  plugins.py  print_logger.py  sched.py  script_func.py
flask_production/plugins/: __init__.py  consolidator.py  ctrl_panel.py  html_templates.py  task_monitor.py
flask_production/plugins/web/: index.html
flask_production/plugins/web/css/: colors.css  ctrl_panel.css  dark_theme.css  rerun_popup.css  taskmonitor.css
flask_production/plugins/web/js/: ctrl_panel.js  task.js  taskmonitor.js
flask_production/state/: __init__.py  base.py  db.py  fs.py
tests/: test_cherrypy.py  test_plugins.py  test_scheduler.py
