[metadata]
name = flask_production
version = 2.7.0
author = Shashank Gopikrishna
author_email = shashank.gopikrishna@gmail.com
description = cherrypy server for Flask + task scheduler and monitor
description_file = README.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
home_page = https://github.com/shashfrankenstien/Flask_Production
license = MIT
license_files = LICENSE


[options]
packages = find:
install_requires =
	CherryPy>=18.6.1
	holidays>=0.16
	MonthDelta>=0.9.1
	psutil>=5.9.1
	python_dateutil>=2.8.2
	requests>=2.25.1
	tzlocal>=4.2


[options.packages.find]
exclude =
	tests
