[metadata]
name = flask_production
version = 3.0.1
author = Shashank Gopikrishna
author_email = shashank.gopikrishna@gmail.com
description = cherrypy server for Flask + task scheduler and monitor
description_file = README.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
home_page = https://github.com/shashfrankenstien/Flask_Production
license = MIT
license_files = LICENSE


[options]
packages = find:
install_requires =
	flask
	CherryPy
	holidays
	MonthDelta
	psutil
	python_dateutil
	requests


[options.packages.find]
exclude =
	tests
